--- a/src/app/pages/sale/forms/form-client/form-client.component.html
+++ b/src/app/pages/sale/forms/form-client/form-client.component.html
@@ -3,7 +3,7 @@
   <div class="row g-2">
     <div class="col-lg-3 mb-3"
       *ngIf="'FORMS.FIELD_NAMES.type_client.label' | translate as translatedLabel;">
-      <label for="tipo_cliente" class="form-label">{{translatedLabel}}</label>
+      <label  class="form-label">{{translatedLabel}}</label>
       <ng-select id="tipo_cliente" formControlName="tipo_cliente" #focusTipoCliente
         (change)="onChangeFieldTypeClient()"
         [notFoundText]="'No se encontraron elementos'"
